--- a/_data/units.yml
+++ b/_data/units.yml
@@ -22,7 +22,7 @@
   acronym: SaFEWaRe
   logo: SaFEWaRe_symbol.png
   head: LorenzoGalvagni
-  website: 
+  website: https://safeware.fbk.eu
   color: "#eccecc"
   visible: true
 
