--- a/_data/units.yml
+++ b/_data/units.yml
@@ -39,7 +39,7 @@
 - id: CLEANSE
   name: CLEANSE Joint Lab
   acronym: CLEANSE
-  website: https://www.deda.group/deda/innovazione/co-innovation-lab
+  website: https://safeware.fbk.eu/collaborations/Cleanse
   visible: false
 
 # Former units
