Fix ordered list

--- a/_data/internships.yml
+++ b/_data/internships.yml
@@ -2149,8 +2149,10 @@ projects:
       The possibility (and convenience) of storing and sharing data through the cloud entails a set of concerns to data security, such as the presence of external attackers, malicious insiders, and honest-but-curious cloud providers. Cryptographic Access Control (CAC) addresses these concerns but presents practical limitations, primarily due to the computational overhead of key management and user revocation.
       Stemming from a collaboration between the Center for Cybersecurity (CS) of FBK and the Ca' Foscari University of Venice (UniVE), a recently published article [1] proposes an abstract methodology to integrate Trusted Execution Environments (TEEs) with CAC and relieve such overhead.
       In this context, applicants would collaborate on extending the work in [1] by choosing one or more of the following activities:
-      1) review the methodology in [1] and investigate its security. This activity may include the use of formal methods;
-      2) implement and experimentally evaluate the performance of the methodology. This activity may include coding, interfacing with TEEs, and integration with tools implementing CAC such as CryptoAC [2].
+      <ol>
+        <li>review the methodology in [1] and investigate its security. This activity may include the use of formal methods;</li>
+        <li>implement and experimentally evaluate the performance of the methodology. This activity may include coding, interfacing with TEEs, and integration with tools implementing CAC such as CryptoAC [2].</li>
+      </ol>
       This project provides the opportunity to acquire the fundamentals of scientific research, investigate and explore cutting-edge and relevant research topics, and engage in software engineering and development while allowing applicants to design, propose, and implement their own ideas.
     type: IT
     level:
